--- a/Database/Secret Project.html
+++ b/Database/Secret Project.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SECRET PROJECTS</title>
-    <script src = "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
         body{
             font-family: 'Playfair Display', serif;
@@ -17,7 +17,6 @@
         table{
             width: 100%;
             border-color: black;
-            border-block-color: black;
             border-collapse: collapse;
             margin-top: 1rem;
         }
@@ -30,72 +29,90 @@
         }
         th{
             background-color: rgb(216, 216, 216);
-            
         }
         .hidden {
             display: none;
+        }
+        .error {
+            color: red;
+            margin-top: .5rem;
+        }
+        .success {
+            color: rgb(0, 206, 0);
+            margin-bottom: .5rem;
         }
     </style>
 </head>
 <body>
     <h1>Secret Club🔞</h1>
-    <div  id ="login-section">
-        <p>Enter your QSI email to access secrets</p>
-        <input type="email" id="email-input" placeholder ="Email">
-        <button onclick="checkAccess()" id="login-button">Login</button>
+
+    <!-- LOGIN SECTION -->
+    <div id="login-section">
+        <p>Enter your QSI email and password</p>
+
+        <!-- EMAIL -->
+        <input type="email" id="email-input" placeholder="Email">
+
+        <!-- NEW PASSWORD BOX -->
+        <input type="password" id="password-input" placeholder="Password" style="display:block; margin-top:10px;">
+
+        <button onclick="checkAccess()" id="login-button" style="margin-top:10px;">Login</button>
         <div class="error" id="error-message"></div>
     </div>
+
+    <!-- SECRET CONTENT -->
     <div id="secret-section" class="hidden">
         <div class="success">Access Granted🫃</div>
         <h2>Top Secret Projects🥵</h2>
+
         <table id="secrets-table">
             <thead>
                 <tr>
                     <th>Project Name</th>
                     <th>Status</th>
                 </tr>
-
             </thead>
             <tbody>
-                <tr>
-                    <td>Portfolio</td>
-                    <td>Done</td>
-                </tr>
-                <tr>
-                    <td>Grocery List</td>
-                    <td>Done</td>
-                </tr>
-                <tr>
-                    <td>Quiz Game</td>
-                    <td>In Progress</td>
-                </tr>
+                <tr><td>Portfolio</td><td>Done</td></tr>
+                <tr><td>Grocery List</td><td>Done</td></tr>
+                <tr><td>Quiz Game</td><td>In Progress</td></tr>
             </tbody>
         </table>
     </div>
+
     <script>
         const supabase_url = 'https://wqypglorxnizlkkcvejp.supabase.co';
-        const supabase_key ='eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndxeXBnbG9yeG5pemxra2N2ZWpwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjM1MTI2MTgsImV4cCI6MjA3OTA4ODYxOH0.VNzFi3pR73m2rPEsJvx_LY2xTYVem1IhRQqzi9hR-3Y';
+        const supabase_key = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndxeXBnbG9yeG5pemxra2N2ZWpwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjM1MTI2MTgsImV4cCI6MjA3OTA4ODYxOH0.VNzFi3pR73m2rPEsJvx_LY2xTYVem1IhRQqzi9hR-3Y';
         const supabase = window.supabase.createClient(supabase_url, supabase_key);
 
-        async function checkAccess(){
-            const email =document.getElementById('email-input').value.trim();
-            const errorEl =document.getElementById('error-message');
+        async function checkAccess() {
+            const email = document.getElementById('email-input').value.trim();
+            const password = document.getElementById('password-input').value.trim();
+            const errorEl = document.getElementById('error-message');
+            const secretSection = document.getElementById('secret-section');
 
-            if(!email || !email.includes('@')){
-                errorEl.textContent = 'Please enter a valid email';
+            // Input validation
+            if (!email || !email.includes('@')) {
+                errorEl.textContent = 'Please enter a valid email.';
                 return;
             }
-            const {data, error} = await supabase
-                .from('members')
-                .select('email')
-                .eq('email', email)
-                .single();
-            const secretSection = document.getElementById('secret-section');
-            if(error||!data){
-                errorEl.textContent = 'Access denied. You are not in a secret club';
-                secretSection.classList.add('hidden');
+            if (!password) {
+                errorEl.textContent = 'Password cannot be empty.';
+                return;
             }
-            else{
+
+            // Query Supabase for BOTH email + password
+            const { data, error } = await supabase
+                .from('members')
+                .select('*')
+                .eq('email', email)
+                .eq('password', password)
+                .single();
+
+            if (error || !data) {
+                errorEl.textContent = 'Access denied. Incorrect email or password.';
+                secretSection.classList.add('hidden');
+            } else {
                 errorEl.textContent = '';
                 secretSection.classList.remove('hidden');
             }
